--- a/css/screen.css
+++ b/css/screen.css
@@ -40,28 +40,28 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 
 .out { position: relative; z-index: 1000; }
 
-input { border: 1px solid #eee; outline: 0; -webkit-transition: border linear, box-shadow linear; -webkit-transition-delay: 0.2s, 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
+input { border: 1px solid #eee; outline: 0; -webkit-transition: border linear 0.2s, box-shadow linear 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -ms-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
 input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
 
 .icon { vertical-align: middle; display: inline-block; }
 
-.icon-login { background: url('../img/icons-s7adc59b6e8.png') 0 -446px no-repeat; width: 9px; height: 12px; }
+.icon-login { background: url('../img/icons-s01a0c7efb4.png') 0 -446px no-repeat; width: 9px; height: 12px; }
 
-.icon-search { background: url('../img/icons-s7adc59b6e8.png') 0 -406px no-repeat; width: 12px; height: 12px; }
+.icon-search { background: url('../img/icons-s01a0c7efb4.png') 0 -406px no-repeat; width: 12px; height: 12px; }
 
-.icon-url { background: url('../img/icons-s7adc59b6e8.png') 0 -240px no-repeat; width: 12px; height: 12px; }
+.icon-url { background: url('../img/icons-s01a0c7efb4.png') 0 -240px no-repeat; width: 12px; height: 12px; }
 
-.icon-location { background: url('../img/icons-s7adc59b6e8.png') 0 -384px no-repeat; width: 7px; height: 12px; }
+.icon-location { background: url('../img/icons-s01a0c7efb4.png') 0 -384px no-repeat; width: 7px; height: 12px; }
 
-.icon-2gis { background: url('../img/icons-s7adc59b6e8.png') 0 -160px no-repeat; width: 30px; height: 15px; }
+.icon-2gis { background: url('../img/icons-s01a0c7efb4.png') 0 -160px no-repeat; width: 30px; height: 15px; }
 
-.icon-fb { background: url('../img/icons-s7adc59b6e8.png') 0 -332px no-repeat; width: 20px; height: 20px; }
+.icon-fb { background: url('../img/icons-s01a0c7efb4.png') 0 -332px no-repeat; width: 20px; height: 20px; }
 
-.icon-tw { background: url('../img/icons-s7adc59b6e8.png') 0 -215px no-repeat; width: 21px; height: 15px; }
+.icon-tw { background: url('../img/icons-s01a0c7efb4.png') 0 -215px no-repeat; width: 21px; height: 15px; }
 
-.icon-vk { background: url('../img/icons-s7adc59b6e8.png') 0 -262px no-repeat; width: 20px; height: 20px; }
+.icon-vk { background: url('../img/icons-s01a0c7efb4.png') 0 -262px no-repeat; width: 20px; height: 20px; }
 
-.icon-od { background: url('../img/icons-s7adc59b6e8.png') 0 -185px no-repeat; width: 20px; height: 20px; }
+.icon-od { background: url('../img/icons-s01a0c7efb4.png') 0 -185px no-repeat; width: 20px; height: 20px; }
 
 .topper { height: 30px; line-height: 30px; background: #2c3d51; color: #ddd; padding-right: 85px; }
 
@@ -76,15 +76,15 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .topper__profile li { list-style: none; float: left; margin-left: 10px; }
 .topper__profile li:first-child { margin-left: 0; }
 .topper__profile li.is-active a { color: #fff; }
-.topper__profile li.is-active a .icon-login { background: url('../img/icons-s7adc59b6e8.png') 0 -468px no-repeat; width: 9px; height: 12px; }
+.topper__profile li.is-active a .icon-login { background: url('../img/icons-s01a0c7efb4.png') 0 -468px no-repeat; width: 9px; height: 12px; }
 .topper__profile a { color: #cfb300; text-decoration: none; }
 .topper__profile a:hover { color: #fff; }
-.topper__profile a:hover .icon-login { background: url('../img/icons-s7adc59b6e8.png') 0 -468px no-repeat; width: 9px; height: 12px; }
+.topper__profile a:hover .icon-login { background: url('../img/icons-s01a0c7efb4.png') 0 -468px no-repeat; width: 9px; height: 12px; }
 
 .header { padding: 25px 50px 37px 70px; background: #fff; }
 
 .header__logo { float: left; margin-right: 20px; }
-.header__logo a { display: block; background: url('../img/icons-s7adc59b6e8.png') 0 0 no-repeat; width: 197px; height: 70px; }
+.header__logo a { display: block; background: url('../img/icons-s01a0c7efb4.png') 0 0 no-repeat; width: 197px; height: 70px; }
 
 .header__search { position: relative; float: left; vertical-align: middle; height: 60px; line-height: 60px; padding: 0 10px; margin-top: 9px; border-radius: 5px; background: #ecf0f1; font-size: 15px; color: #2c3b53; width: 760px; }
 .header__search:before { content: ""; position: absolute; display: block; border-style: solid; border-color: transparent #ecf0f1 transparent transparent; top: 50%; left: -5px; margin-top: -5px; border-width: 5px 5px 5px 0; }
@@ -123,11 +123,11 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .catalog__list { margin-right: 23px; margin-left: 20px; }
 .catalog__list li { position: relative; list-style: none; margin-bottom: 8px; line-height: 1.2; }
-.catalog__list li:before { background: url('../img/icons-s7adc59b6e8.png') 0 -312px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
+.catalog__list li:before { background: url('../img/icons-s01a0c7efb4.png') 0 -312px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
 .catalog__list li a { font-size: 15px; color: #2c3a52; text-decoration: none; border-bottom: 1px dotted #2c3a52; }
 .catalog__list li a:hover { color: #2c3a52; text-decoration: none; border-bottom: 1px dotted transparent; }
 .catalog__list li.active { position: relative; }
-.catalog__list li.active:before { background: url('../img/icons-s7adc59b6e8.png') 0 -292px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
+.catalog__list li.active:before { background: url('../img/icons-s01a0c7efb4.png') 0 -292px no-repeat; width: 10px; height: 10px; content: ""; position: absolute; top: 3px; left: -17px; }
 .catalog__list li.active a { border-bottom: 1px dotted #e7c400; color: #e7c400; text-decoration: none; }
 .catalog__list li.active a:hover { text-decoration: none; color: #e7c400; border-bottom: 1px dotted transparent; }
 .catalog__list li.active li:before { content: none; }
@@ -171,7 +171,7 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .alt .out { min-height: 100%; height: auto !important; height: 100%; margin: 0 0 -142px 86px; z-index: 0; }
 .alt .header { padding-top: 39px; margin-left: -87px; background: #fff; }
 .alt .header__logo { float: left; margin-right: 20px; }
-.alt .header__logo a { display: block; background: url('../img/icons-s7adc59b6e8.png') 0 -80px no-repeat; width: 119px; height: 70px; }
+.alt .header__logo a { display: block; background: url('../img/icons-s01a0c7efb4.png') 0 -80px no-repeat; width: 119px; height: 70px; }
 .alt .footer { position: relative; height: 142px; width: 260px; color: #7f8c8d; font-size: 13px; margin-left: 85px; }
 .alt .auth__title { margin-bottom: 24px; position: relative; }
 .alt .auth__title p { font-size: 20px; color: #666; }
@@ -189,12 +189,12 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .alt .form__request { text-align: center; margin-top: -15px; }
 .alt .form__info { color: #aaa; font-size: 13px; line-height: 1.2; margin-top: 5px; }
 .alt .formline__success .form__controls { position: relative; }
-.alt .formline__success .form__controls:after { background: url('../img/icons-s7adc59b6e8.png') 0 -362px no-repeat; width: 14px; height: 12px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
+.alt .formline__success .form__controls:after { background: url('../img/icons-s01a0c7efb4.png') 0 -362px no-repeat; width: 14px; height: 12px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
 .alt .formline__error .form__label { font-size: 14px; color: #ea4f2f; display: inline-block; margin-bottom: 0.2em; }
-.alt .formline__error input { color: #ea4f2f; outline: 0; -webkit-transition: border linear, box-shadow linear; -webkit-transition-delay: 0.2s, 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; border: 1px solid #eee; border-color: rgba(236, 82, 107, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 107, 0.6); }
+.alt .formline__error input { color: #ea4f2f; outline: 0; -webkit-transition: border linear 0.2s, box-shadow linear 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -ms-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; border: 1px solid #eee; border-color: rgba(236, 82, 107, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 107, 0.6); }
 .alt .formline__error input:focus { box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-color: 0; border: 1px solid #eee; }
 .alt .formline__error .form__controls { position: relative; }
-.alt .formline__error .form__controls:after { background: url('../img/icons-s7adc59b6e8.png') 0 -428px no-repeat; width: 8px; height: 8px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
+.alt .formline__error .form__controls:after { background: url('../img/icons-s01a0c7efb4.png') 0 -428px no-repeat; width: 8px; height: 8px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
 .alt .formline__error .form__errorifno { position: absolute; width: 140px; top: 5px; right: -185px; font-size: 12px; color: #ea4f2f; }
 .alt .formline__error .form__errorifno a { font-size: 13px; color: #ea4f2f; text-decoration: underline; }
 .alt .formline__error .form__errorifno a:hover { text-decoration: none; }
@@ -241,14 +241,28 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .topper:before, .header:before, .header__search:before, .header__links:before, .alt .header:before, .topper:after, .header:after, .header__search:after, .header__links:after, .alt .header:after { content: " "; display: table; }
 .topper:after, .header:after, .header__search:after, .header__links:after, .alt .header:after { clear: both; }
 
-.sidebar { -webkit-transition: all 500ms linear; -moz-transition: all 500ms linear; -o-transition: all 500ms linear; transition: all 500ms linear; }
+.sidebar { -webkit-transition: all 300ms linear; -moz-transition: all 300ms linear; -ms-transition: all 300ms linear; -o-transition: all 300ms linear; transition: all 300ms linear; }
 .sidebar .push { height: 140px; }
 .sidebar .catalog { margin-bottom: -140px; min-height: 100%; }
 .sidebar .footer { position: relative; }
 
+.baron__scrollerbar:hover, .baron__scrollerbar:active { background: #d6d6d6; }
+
 .sidebar.is-hidden { left: -367px; }
 
 .sidebar-key { position: absolute; top: 50%; right: -21px; margin-top: -20px; width: 22px; height: 40px; line-height: 40px; background: #fcfcfc; border: 0; cursor: pointer; -webkit-border-radius: 0 3px 3px 0; -moz-border-radius: 0 3px 3px 0; -ms-border-radius: 0 3px 3px 0; -o-border-radius: 0 3px 3px 0; border-radius: 0 3px 3px 0; }
-.sidebar-key i { display: inline-block; background: url('../img/icons-s7adc59b6e8.png') 0 -510px no-repeat; width: 7px; height: 10px; }
+.sidebar-key i { display: inline-block; background: url('../img/icons-s01a0c7efb4.png') 0 -510px no-repeat; width: 7px; height: 10px; }
 
-.sidebar-key.is-active i { background: url('../img/icons-s7adc59b6e8.png') 0 -490px no-repeat; width: 7px; height: 10px; }
+.sidebar-key.is-active i { background: url('../img/icons-s01a0c7efb4.png') 0 -490px no-repeat; width: 7px; height: 10px; }
+
+.search { margin-left: 20px; }
+.search li { list-style-type: none; }
+
+.sticker { display: inline-block; padding: 7px 9px; }
+
+.sticker_yellow { background: #ffc700; color: #fff; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; }
+
+.accordion__title { position: relative; display: inline-block; color: #2c3d51; cursor: pointer; line-height: 1; font-size: 14px; border-bottom: 1px dotted; }
+.accordion__title i { position: absolute; left: -14px; top: 5px; background: url('../img/icons-s01a0c7efb4.png') 0 -544px no-repeat; width: 7px; height: 4px; }
+
+.accordion__title.is-active i { background: url('../img/icons-s01a0c7efb4.png') 0 -530px no-repeat; width: 7px; height: 4px; }
