--- a/css/eugene.css
+++ b/css/eugene.css
@@ -8,14 +8,9 @@
 .sidebar.is-hidden { left: -367px; }
 
 .sidebar-key { position: absolute; top: 50%; right: -21px; margin-top: -20px; width: 22px; height: 40px; line-height: 40px; background: #fcfcfc; border: 0; cursor: pointer; -webkit-border-radius: 0 3px 3px 0; -moz-border-radius: 0 3px 3px 0; -ms-border-radius: 0 3px 3px 0; -o-border-radius: 0 3px 3px 0; border-radius: 0 3px 3px 0; }
-<<<<<<< HEAD
-.sidebar-key i { display: inline-block; background: url('../img/icons-s7adc59b6e8.png') 0 -510px no-repeat; width: 7px; height: 10px; }
+.sidebar-key i { display: inline-block; background: url('../img/icons-s01a0c7efb4.png') 0 -510px no-repeat; width: 7px; height: 10px; }
 
-.sidebar-key.is-active i { background: url('../img/icons-s7adc59b6e8.png') 0 -490px no-repeat; width: 7px; height: 10px; }
-=======
-.sidebar-key i { display: inline-block; background: url('../img/icons-s573ec8c7f8.png') 0 -275px no-repeat; width: 7px; height: 10px; }
-
-.sidebar-key.is-active i { background: url('../img/icons-s573ec8c7f8.png') 0 -255px no-repeat; width: 7px; height: 10px; }
+.sidebar-key.is-active i { background: url('../img/icons-s01a0c7efb4.png') 0 -490px no-repeat; width: 7px; height: 10px; }
 
 .search { margin-left: 20px; }
 .search li { list-style-type: none; }
@@ -25,7 +20,6 @@
 .sticker_yellow { background: #ffc700; color: #fff; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; }
 
 .accordion__title { position: relative; display: inline-block; color: #2c3d51; cursor: pointer; line-height: 1; font-size: 14px; border-bottom: 1px dotted; }
-.accordion__title i { position: absolute; left: -14px; top: 5px; background: url('../img/icons-s573ec8c7f8.png') 0 -309px no-repeat; width: 7px; height: 4px; }
+.accordion__title i { position: absolute; left: -14px; top: 5px; background: url('../img/icons-s01a0c7efb4.png') 0 -544px no-repeat; width: 7px; height: 4px; }
 
-.accordion__title.is-active i { background: url('../img/icons-s573ec8c7f8.png') 0 -295px no-repeat; width: 7px; height: 4px; }
->>>>>>> d36ba679a3c781fb68a5f9c5234d08f9cbc74e23
+.accordion__title.is-active i { background: url('../img/icons-s01a0c7efb4.png') 0 -530px no-repeat; width: 7px; height: 4px; }
