--- a/css/screen.css
+++ b/css/screen.css
@@ -40,7 +40,7 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 
 .out { position: relative; z-index: 1000; }
 
-input { border: 1px solid #eee; outline: 0; -webkit-transition: border linear 0.2s, box-shadow linear 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -ms-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
+input { border: 1px solid #eee; outline: 0; -webkit-transition: border linear, box-shadow linear; -webkit-transition-delay: 0.2s, 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
 input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
 
 .icon { vertical-align: middle; display: inline-block; }
@@ -73,7 +73,7 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .topper__profile { float: right; text-transform: uppercase; }
 .topper__profile .icon-login { margin-top: -4px; margin-right: 2px; }
-.topper__profile li { list-style: none; float: left; margin-left: 10px; }
+.topper__profile li { position: relative; list-style: none; float: left; margin-left: 10px; }
 .topper__profile li:first-child { margin-left: 0; }
 .topper__profile li.is-active a { color: #fff; }
 .topper__profile li.is-active a .icon-login { background: url('../img/icons-s01a0c7efb4.png') 0 -468px no-repeat; width: 9px; height: 12px; }
@@ -177,28 +177,36 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .alt .auth__title p { font-size: 20px; color: #666; }
 .alt .title { color: #2c3d51; font-size: 36px; line-height: 1.2; display: inline-block; }
 .alt .footer, .alt .push { height: 142px; }
-.alt .form { -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; background: #ecf0f1; padding: 24px 0 0 0; width: 487px; }
-.alt .form input { width: 96%; height: 40px; line-height: 40px; font-size: 17px; padding: 0 1%; }
-.alt .form input.form__login { width: 60%; color: #94a5a5; }
-.alt .form a { font-size: 13px; color: #2c3d51; text-decoration: none; }
-.alt .form a:hover { text-decoration: underline; }
-.alt .form span { color: #2c3d51; font-size: 16px; margin-left: 10px; display: inline-block; }
-.alt .form__wrap { margin: 0 38px; }
-.alt .form__line { margin-bottom: 24px; }
-.alt .form__label { font-size: 14px; color: #444; display: inline-block; margin-bottom: 0.2em; margin-left: 2px; }
-.alt .form__request { text-align: center; margin-top: -15px; }
-.alt .form__info { color: #aaa; font-size: 13px; line-height: 1.2; margin-top: 5px; }
-.alt .formline__success .form__controls { position: relative; }
-.alt .formline__success .form__controls:after { background: url('../img/icons-s01a0c7efb4.png') 0 -362px no-repeat; width: 14px; height: 12px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
-.alt .formline__error .form__label { font-size: 14px; color: #ea4f2f; display: inline-block; margin-bottom: 0.2em; }
-.alt .formline__error input { color: #ea4f2f; outline: 0; -webkit-transition: border linear 0.2s, box-shadow linear 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -ms-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; border: 1px solid #eee; border-color: rgba(236, 82, 107, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 107, 0.6); }
-.alt .formline__error input:focus { box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-color: 0; border: 1px solid #eee; }
-.alt .formline__error .form__controls { position: relative; }
-.alt .formline__error .form__controls:after { background: url('../img/icons-s01a0c7efb4.png') 0 -428px no-repeat; width: 8px; height: 8px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
-.alt .formline__error .form__errorifno { position: absolute; width: 140px; top: 5px; right: -185px; font-size: 12px; color: #ea4f2f; }
-.alt .formline__error .form__errorifno a { font-size: 13px; color: #ea4f2f; text-decoration: underline; }
-.alt .formline__error .form__errorifno a:hover { text-decoration: none; }
 .alt .sidebar { background: none; width: auto; position: relative; padding: 0; top: 0; bottom: 0; margin-left: 25px; margin-top: 95px; }
+
+.form { -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; background: #ecf0f1; padding: 24px 0 0 0; width: 487px; }
+.form input { width: 96%; height: 40px; line-height: 40px; font-size: 17px; padding: 0 1%; }
+.form input.form__login { width: 60%; color: #94a5a5; }
+.form a { font-size: 13px; color: #2c3d51; text-decoration: none; }
+.form a:hover { text-decoration: underline; }
+.form span { color: #2c3d51; font-size: 16px; margin-left: 10px; display: inline-block; }
+
+.form__wrap { margin: 0 38px; }
+
+.form__line { margin-bottom: 24px; }
+
+.form__label { font-size: 14px; color: #444; display: inline-block; margin-bottom: 0.2em; margin-left: 2px; }
+
+.form__request { text-align: center; margin-top: -15px; }
+
+.form__info { color: #aaa; font-size: 13px; line-height: 1.2; margin-top: 5px; }
+
+.formline__success .form__controls { position: relative; }
+.formline__success .form__controls:after { background: url('../img/icons-s01a0c7efb4.png') 0 -362px no-repeat; width: 14px; height: 12px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
+
+.formline__error .form__label { font-size: 14px; color: #ea4f2f; display: inline-block; margin-bottom: 0.2em; }
+.formline__error input { color: #ea4f2f; outline: 0; -webkit-transition: border linear, box-shadow linear; -webkit-transition-delay: 0.2s, 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s; -o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s; border: 1px solid #eee; border-color: rgba(236, 82, 107, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 107, 0.6); }
+.formline__error input:focus { box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); border-color: 0; border: 1px solid #eee; }
+.formline__error .form__controls { position: relative; }
+.formline__error .form__controls:after { background: url('../img/icons-s01a0c7efb4.png') 0 -428px no-repeat; width: 8px; height: 8px; content: ""; position: absolute; top: 50%; right: -17px; margin-top: -4px; }
+.formline__error .form__errorifno { position: absolute; width: 140px; top: 5px; right: -185px; font-size: 12px; color: #ea4f2f; }
+.formline__error .form__errorifno a { font-size: 13px; color: #ea4f2f; text-decoration: underline; }
+.formline__error .form__errorifno a:hover { text-decoration: none; }
 
 .btn-warining { -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; background: #e7c200; color: #fff; font-size: 13px; font-weight: bold; text-decoration: none; height: 30px; line-height: 30px; display: inline-block; padding: 0 8px; position: relative; top: -23px; left: 10px; text-transform: uppercase; }
 
@@ -216,6 +224,22 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .socials .socials__tw a { color: #27a9e4; }
 .socials .socials__vk a { color: #2c4670; }
 .socials .socials__od a { color: #e57f18; }
+
+.loginpopup { position: absolute; top: 30px; left: -88px; width: 242px; background: #fafafa; z-index: 1001; }
+.loginpopup:before { position: absolute; content: ""; top: -5px; left: 50%; margin-left: -5px; width: 0px; height: 0px; border-style: solid; border-width: 0 5px 5px 5px; border-color: transparent transparent #fafafa transparent; }
+.loginpopup .form { padding: 19px 0 0 0; width: 100%; }
+.loginpopup .form input { font-size: 14px; width: 82%; padding: 0 7%; }
+.loginpopup .form a { font-size: 12px; color: #2c3d51 !important; text-transform: none; text-decoration: underline; }
+.loginpopup .form a:hover { text-decoration: none; }
+.loginpopup .form .form__wrap { margin: 0 18px; }
+.loginpopup .form .form__line { margin-bottom: 8px; }
+.loginpopup .form .form__request { margin-top: -2px; }
+.loginpopup .form .btn-success { height: 40px; line-height: 40px; }
+
+.loginpopup__socials { padding: 13px 0 8px 0; }
+.loginpopup__socials .title { text-align: center; font-size: 10px; font-weight: normal; text-transform: uppercase; color: #7f8c8d; line-height: 1; }
+.loginpopup__socials ul { text-align: center; }
+.loginpopup__socials li { float: none; display: inline-block; line-height: 1; margin-right: 6px; }
 
 .icon-2gis, .header__logo a, .alt .header__logo a { font: 0/0 a; text-shadow: none; color: transparent; }
 
@@ -241,7 +265,7 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .topper:before, .header:before, .header__search:before, .header__links:before, .alt .header:before, .topper:after, .header:after, .header__search:after, .header__links:after, .alt .header:after { content: " "; display: table; }
 .topper:after, .header:after, .header__search:after, .header__links:after, .alt .header:after { clear: both; }
 
-.sidebar { -webkit-transition: all 300ms linear; -moz-transition: all 300ms linear; -ms-transition: all 300ms linear; -o-transition: all 300ms linear; transition: all 300ms linear; }
+.sidebar { -webkit-transition: all 300ms linear; -moz-transition: all 300ms linear; -o-transition: all 300ms linear; transition: all 300ms linear; }
 .sidebar .push { height: 140px; }
 .sidebar .catalog { margin-bottom: -140px; min-height: 100%; }
 .sidebar .footer { position: relative; }
