--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -98,6 +98,7 @@ input{
 			margin-right: 2px;
 		}
 		li{
+			position: relative;
 			list-style: none;
 			float: left;
 			margin-left: 10px;
@@ -580,121 +581,7 @@ input{
 	}
 
 
-	.form{
-		@include border-radius(4px);
-		background: #ecf0f1;
-		padding: 24px 0 0 0;
-		width: 487px;
-		input{
-			width: 96%;
-			height: 40px;
-			line-height: 40px;
-			font-size: 17px;
-			padding: 0 1%;
-			&.form__login{
-				width: 60%;
-				color: #94a5a5;
-			}
-		}
-		a{
-			font-size: 13px;
-			color: #2c3d51;
-			text-decoration: none;
-			&:hover{
-				text-decoration: underline;
-			}
-		}
-		span{
-			color: #2c3d51;
-			font-size: 16px;
-			margin-left: 10px;
-			display: inline-block;
-		}
-	}
-		.form__wrap{
-			margin: 0 38px;
-		}
-		.form__line{
-			margin-bottom: 24px;
-		}
-		.form__label{
-			font-size: 14px;
-			color: #444;
-			display: inline-block;
-			margin-bottom: 0.2em;
-			margin-left: 2px;
-		}
-		.form__request{
-			text-align: center;
-			margin-top: -15px;
-		}
-		.form__info{
-			color: #aaa;
-			font-size: 13px;
-			line-height: 1.2;
-			margin-top: 5px;
-		}
-		.formline__success{
-			.form__controls{
-				position: relative;
-				&:after{
-					@include sized-sprite($icons, ico_success);
-					content: "";
-					position: absolute;
-					top: 50%;
-					right: -17px;
-					margin-top: -4px;
-				}
-			}
-		}
-		.formline__error{
-			.form__label{
-				font-size: 14px;
-				color: #ea4f2f;
-				display: inline-block;
-				margin-bottom: 0.2em;
-			}
-			input{
-				color: #ea4f2f;
-				outline: 0;
-				@include transition(border linear 0.2s, box-shadow linear 0.2s);
-				border: 1px solid #eee;
-				border-color: rgba(236, 82, 107, 0.8);
-				box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 107, 0.6);
-				&:focus{
-					box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-					border-color: 0;
-					border: 1px solid #eee;
-				}
-			}
-			.form__controls{
-				position: relative;
-				&:after{
-					@include sized-sprite($icons, ico_error);
-					content: "";
-					position: absolute;
-					top: 50%;
-					right: -17px;
-					margin-top: -4px;
-				}
-			}
-			.form__errorifno{
-				position: absolute;
-				width: 140px;
-				top: 5px;
-				right: -185px;
-				font-size: 12px;
-				color: #ea4f2f;
-				a{
-					font-size: 13px;
-					color: #ea4f2f;
-					text-decoration: underline;
-					&:hover{
-						text-decoration: none;
-					}
-				}
-			}
-		}
+
 	.sidebar{
 		background: none;
 		width: auto;
@@ -708,6 +595,121 @@ input{
 
 }
 
+.form{
+	@include border-radius(4px);
+	background: #ecf0f1;
+	padding: 24px 0 0 0;
+	width: 487px;
+	input{
+		width: 96%;
+		height: 40px;
+		line-height: 40px;
+		font-size: 17px;
+		padding: 0 1%;
+		&.form__login{
+			width: 60%;
+			color: #94a5a5;
+		}
+	}
+	a{
+		font-size: 13px;
+		color: #2c3d51;
+		text-decoration: none;
+		&:hover{
+			text-decoration: underline;
+		}
+	}
+	span{
+		color: #2c3d51;
+		font-size: 16px;
+		margin-left: 10px;
+		display: inline-block;
+	}
+}
+	.form__wrap{
+		margin: 0 38px;
+	}
+	.form__line{
+		margin-bottom: 24px;
+	}
+	.form__label{
+		font-size: 14px;
+		color: #444;
+		display: inline-block;
+		margin-bottom: 0.2em;
+		margin-left: 2px;
+	}
+	.form__request{
+		text-align: center;
+		margin-top: -15px;
+	}
+	.form__info{
+		color: #aaa;
+		font-size: 13px;
+		line-height: 1.2;
+		margin-top: 5px;
+	}
+	.formline__success{
+		.form__controls{
+			position: relative;
+			&:after{
+				@include sized-sprite($icons, ico_success);
+				content: "";
+				position: absolute;
+				top: 50%;
+				right: -17px;
+				margin-top: -4px;
+			}
+		}
+	}
+	.formline__error{
+		.form__label{
+			font-size: 14px;
+			color: #ea4f2f;
+			display: inline-block;
+			margin-bottom: 0.2em;
+		}
+		input{
+			color: #ea4f2f;
+			outline: 0;
+			@include transition(border linear 0.2s, box-shadow linear 0.2s);
+			border: 1px solid #eee;
+			border-color: rgba(236, 82, 107, 0.8);
+			box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 107, 0.6);
+			&:focus{
+				box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+				border-color: 0;
+				border: 1px solid #eee;
+			}
+		}
+		.form__controls{
+			position: relative;
+			&:after{
+				@include sized-sprite($icons, ico_error);
+				content: "";
+				position: absolute;
+				top: 50%;
+				right: -17px;
+				margin-top: -4px;
+			}
+		}
+		.form__errorifno{
+			position: absolute;
+			width: 140px;
+			top: 5px;
+			right: -185px;
+			font-size: 12px;
+			color: #ea4f2f;
+			a{
+				font-size: 13px;
+				color: #ea4f2f;
+				text-decoration: underline;
+				&:hover{
+					text-decoration: none;
+				}
+			}
+		}
+	}
 
 .btn-warining{
 	@include border-radius(4px);
@@ -799,3 +801,77 @@ input{
 		}
 	}
 }
+
+
+
+.loginpopup{
+	position: absolute;
+	top: 30px;
+	left: -88px;
+	width: 242px;
+	background: #fafafa;
+	z-index: 1001;
+	&:before{
+		position: absolute;
+		content: "";
+		top: -5px;
+		left: 50%;
+		margin-left: -5px;
+		width: 0px;
+		height: 0px;
+		border-style: solid;
+		border-width: 0 5px 5px 5px;
+		border-color: transparent transparent #fafafa transparent;
+	}
+	.form{
+		padding: 19px 0 0 0;
+		width: 100%;
+		input{
+			font-size: 14px;
+			width: 82%;
+			padding: 0 7%;
+		}
+		a{
+			font-size: 12px;
+			color: #2c3d51 !important;
+			text-transform: none;
+			text-decoration: underline;
+			&:hover{
+				text-decoration: none;
+			}
+		}
+		.form__wrap {
+			margin: 0 18px;
+		}
+		.form__line {
+			margin-bottom: 8px;
+		}
+		.form__request {
+			margin-top: -2px;
+		}
+		.btn-success {
+			height: 40px;
+			line-height: 40px;
+		}
+	}
+}
+	.loginpopup__socials{
+		padding: 13px 0 8px 0;
+		.title{
+			text-align: center;
+			font-size: 10px;
+			font-weight: normal;
+			text-transform: uppercase;
+			color: #7f8c8d;
+			line-height: 1;
+		}
+		ul{
+			text-align: center;
+		}
+		li{
+			float: none;
+			display: inline-block;
+			line-height: 1;
+			margin-right: 6px;
+		}
+	}
